Fixed various css issues on mobile devices

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4572,10 +4572,48 @@ a.list-group-item.active > .badge,
   .jumbotron {
     padding-top: 48px;
     padding-bottom: 48px;
+    color: #E6E6E6;
+	background: #45484d; /* Old browsers */
+	background: -moz-linear-gradient(top, #45484d 0%, #000000 99%);
+	/* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #45484d),
+		color-stop(99%, #000000)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #45484d 0%, #000000 99%);
+	/* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #45484d 0%, #000000 99%);
+	/* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #45484d 0%, #000000 99%);
+	/* IE10+ */
+	background: linear-gradient(to bottom, #45484d 0%, #000000 99%);
+	/* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d',
+		endColorstr='#000000', GradientType=0);
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
   }
   .container .jumbotron {
     padding-right: 60px;
     padding-left: 60px;
+       color: #E6E6E6;
+	background: #45484d; /* Old browsers */
+	background: -moz-linear-gradient(top, #45484d 0%, #000000 99%);
+	/* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #45484d),
+		color-stop(99%, #000000)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #45484d 0%, #000000 99%);
+	/* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #45484d 0%, #000000 99%);
+	/* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #45484d 0%, #000000 99%);
+	/* IE10+ */
+	background: linear-gradient(to bottom, #45484d 0%, #000000 99%);
+	/* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d',
+		endColorstr='#000000', GradientType=0);
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
   }
   .jumbotron h1,
   .jumbotron .h1 {
